deprecated URL updated for URI use in NetModel. UI refreshed